--- a/introduction.tex
+++ b/introduction.tex
@@ -18,7 +18,7 @@ The Vassiliev invariants are functions on the chambers of the strata (the knots)
 Chapter \ref{ch:vassiliev-invariants-and-chord-diagrams} reviews the theory of Vassiliev invariants, with attention given to the particularly fruitful polynomial analogy first made by Bar--Natan in \cite{on-the-vassiliev-knot-invariants}.
 The set of all Vassiliev invariants \(\mathcal{V}\) has the structure of a filtered bialgebra, and its product and coproduct mirror those of the filtered bialgebra of polynomial functions on the real line.
 
-The most important result of the Chapter is the fundamental theorem of Vassiliev invariants --- a corollary of the work of Kontsevich \cite{vassilievs-knot-invariants} --- which states that the bialgebra of Vassiliev invariants is effectively described by its associated graded bialgebra, the algebra \(\mathcal{A}\) of chord diagrams. Once again, this fits neatly into an analogy with polynomials in which elements of \(\mathcal{A}\) are likened with constants of integration. Indeed, any polynomial function of degree \(m\) on the real line can be constructed as a definite integral of the zero function \(m\) times by making some specific choice of the constant of integration in each of the \(m\) definite integrals. This choice of constants at every stage completely describes the polynomial. An arbitrary Vassiliev invariant is described by the algebra \(\mathcal{A}\) of chord diagrams in an analogous way.
+The most important result of the chapter is the fundamental theorem of Vassiliev invariants --- a corollary of the work of Kontsevich \cite{vassilievs-knot-invariants} --- which states that the bialgebra of Vassiliev invariants is effectively described by its associated graded bialgebra, the algebra \(\mathcal{A}\) of chord diagrams. Once again, this fits neatly into an analogy with polynomials in which elements of \(\mathcal{A}\) are likened with constants of integration. Indeed, any polynomial function of degree \(m\) on the real line can be constructed as a definite integral of the zero function \(m\) times by making some specific choice of the constant of integration in each of the \(m\) definite integrals. This choice of constants at every stage completely describes the polynomial. An arbitrary Vassiliev invariant is described by the algebra \(\mathcal{A}\) of chord diagrams in an analogous way.
 
 In Chapter \ref{ch:lie-theory-and-jacobi-diagrams}, the structure of the algebra \(\mathcal{A}\) is examined. The relations in this algebra have a Lie algebraic flavour, and as such a classical construction of Bar-Natan takes a metric Lie algebra and produces a functional on \(\mathcal{A}\), known as a weight system. By the fundamental theorem of the previous chapter this yields a class of Vassiliev invariants. We showcase this construction by computing, following Yang \cite{on-values-of-sl3-weight-system-on-chord-diagrams-whose-intersection-graph-is-complete-bipartite}, the values of the functional associated with the exceptional Lie algebra \(\mathfrak{g}_{2}\) on an infinite family of chord diagrams.
 
