--- a/welded_knots_Ig_and_arrow_diagrams.tex
+++ b/welded_knots_Ig_and_arrow_diagrams.tex
@@ -247,7 +247,7 @@ The existence of a finite type invariant \(Z\) for welded knots establishes a we
 Unlike the involved construction for the Kontsevich integral \(Z\), the construction of \(Z_{w}\) is relatively simple. The \ref{eq:TC} relation does all of the heavy lifting. A proof can be found in \cite{finite-type-invariants-of-w-knotted-objects-I-w-knots-and-the-alexander-polynomial}.
 
 \begin{corollary}[Fundamental theorem of Vassiliev invariants of welded knots]
-	We have
+	We have the graded bialgebra isomorphism
 	\[\mathcal{A}_{w} \cong \gr \mathcal{K}_{w}.\]
 	Equivalently,
 	\[\mathcal{V}_{w} \cong \gr \mathcal{W}_{w}.\]
@@ -732,7 +732,7 @@ Denote \(\mathbf{I} = \mathbf{1}^{\vee} \oplus \mathbf{1} \in \mathbf{T}_{\varep
 	completing the proof.
 \end{proof}
 
-We therefore obtain the following Hinnich--Vaintrob style description of the algebra \(\mathcal{A}_{w}\).
+We therefore obtain the following description of the algebra \(\mathcal{A}_{w}\).
 
 \begin{theorem}
 	\label{thm:universal-two-coloured-coeval-envelope-arrow-diagrams-isomorphism}
@@ -819,7 +819,7 @@ We obtain as a corollary the following Hinich--Vaintrob theorem for the bialgebr
 	The bialgerba \(U(\mathcal{O}_{\text{Lie}}, \mathbf{I})\) is isomorphic to \(\mathcal{A}_{w}\) as a filtered bialgebra.
 \end{theorem}
 
-Recall that the raison d'etre of Theorem \ref{thm:universal-casimir-lie-envelope-chord-diagrams-bialgebra-isomorphism} was to formalise the informal statement that ``the algebra \(\mathcal{A}\) of chord diagrams behaves like the universal enveloping algebra of a Lie algebra''. Interpreting Theorem \ref{thm:universal-two-coloured-coeval-envelope-arrow-diagrams-bialgebra-isomorphism} in the same manner, its statement becomes that ``the bialgebra \(\mathcal{A}_{w}\) or arrow diagrams behaves like the universal enveloping algebra \(\mathcal{U}(I\mathfrak{g})\) of a cocommutative Drinfeld double \(I\mathfrak{g}\) of a Lie algebra \(\mathfrak{g}\)''.
+Recall that the raison d'etre of Theorem \ref{thm:universal-casimir-lie-envelope-chord-diagrams-bialgebra-isomorphism} was to formalise the informal statement that ``the bialgebra \(\mathcal{A}\) of chord diagrams behaves like the universal enveloping algebra of a Lie algebra''. Interpreting Theorem \ref{thm:universal-two-coloured-coeval-envelope-arrow-diagrams-bialgebra-isomorphism} in the same manner, its statement becomes that ``the bialgebra \(\mathcal{A}_{w}\) or arrow diagrams behaves like the universal enveloping algebra \(\mathcal{U}(I\mathfrak{g})\) of a cocommutative Drinfeld double \(I\mathfrak{g}\) of a Lie algebra \(\mathfrak{g}\)''.
 
 \begin{remark}
 	For classical weight systems Theorem \ref{thm:universal-casimir-lie-envelope-chord-diagrams-algebra-isomorphism} proves that every weight system (so every functional on \(\mathcal{A}\)) comes from applying Construction \ref{cons:lie-algebra-weight-system} to some Lie algebra object in some symmetric monoidal category. However, for welded weight systems, this is also achieved in as a corollary of \cite[Thm. 3.26]{finite-type-invariants-of-w-knotted-objects-I-w-knots-and-the-alexander-polynomial} which states that the universal finite type invariant of welded knots \(Z_{w}\) is equivalent to the Alexander polynomial. Indeed, recall that the Alexander polynomial factors through the weight system \(W_{\mathfrak{gl}_{1|1}}\), and since every welded weight system factors through \(Z_{w}\), they all factor through \(W_{\mathfrak{gl}_{1|1}}\). As such, all welded weight systems arise via Construction \ref{cons:lie-algebra-weight-system} from Lie superalgebras, specifically \(\mathfrak{gl}_{1|1}\). Theorem \ref{thm:universal-two-coloured-coeval-envelope-arrow-diagrams-isomorphism} gives an alternative, categorical proof of this fact.
