Financial supprt and originality statements

--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,9 @@
 
 \include{tableofcontents}
 
+\include{originalitystatement}
+\include{financialsupportstatement}
+
 \pagestyle{chapterchapter}
 \include{acknowledgements}
 
