Modify modular operads remark

--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -1739,7 +1739,7 @@ Since in the map \(f: U(\mathcal{O}_{\text{Lie}}, \mathbf{1}_{c}) \to \mathcal{A
 \end{definition}
 
 \begin{remark}
-	In \cite{cyclic-operads-and-the-algebra-of-chord-diagrams} a operad-theoretic characterisation of the primitive elements is given. Recalling from Corollary \ref{cor:primitives-equals-connected-jacobi-diagrams} that by the formula for the coproduct, the primitive elements are exactly the connected components, this also gives a definition of the coproduct without reference to connected components. The characterisation is technical, involving modular operads, and out of the scope of this text.
+	In \cite{cyclic-operads-and-the-algebra-of-chord-diagrams} a operad-theoretic characterisation of the primitive elements is given in terms of modular operads. Recalling from Corollary \ref{cor:primitives-equals-connected-jacobi-diagrams} that by the formula for the coproduct, the primitive elements are exactly the connected components, this also gives a definition of the coproduct without reference to connected components.
 \end{remark}
 
 With this definition, we obtain as a corollary an upgrade of the isomorphism of Theorem \ref{thm:universal-casimir-lie-envelope-chord-diagrams-algebra-isomorphism} to the level of bialgebras.
