Add generative AI use statement for the bureaucrats

--- a/main.tex
+++ b/main.tex
@@ -11,10 +11,14 @@
 
 \include{tableofcontents}
 
+\pagestyle{plain}
+
 \include{originalitystatement}
 \include{financialsupportstatement}
+\include{generativeaistatement}
 
 \pagestyle{chapterchapter}
+
 \include{acknowledgements}
 
 \mainmatter
