--- a/originalitystatement.tex
+++ b/originalitystatement.tex
@@ -1,6 +1,4 @@
-\chapter*{Statement of originality}
-\addcontentsline{toc}{section}{\textit{Statement of originality}}
-\markboth{\textit{Statement of originality}}{\textit{Statement of originality}}
+\section*{Statement of originality}
 
 \textit{This statement is to certify that to the best of my knowledge, the content of this thesis is my own work, and that this thesis has not been submitted for any degree or other purposes.}
 
