--- a/welded_knots_Ig_and_arrow_diagrams.tex
+++ b/welded_knots_Ig_and_arrow_diagrams.tex
@@ -1,4 +1,4 @@
-\chapter{Welded knots, isometry Lie algebras and arrow diagrams}
+\chapter{Welded knots, \(I\mathfrak{g}\) and arrow diagrams}
 \label{ch:welded-knots-isometry-lie-algebras-and-arrow-diagrams}
 
 \lettrine{\libertineInitialGlyph{T}}{aken} generally, knot theory is the study of codimension two embedded submanifolds. The theory of welded knots, or \(w\)-knots is a diagrammatic generalisation of knot theory that relates to knotted tori in \(\mathbb{R}^{4}\), and it has its own flavour of Vassiliev invariants. Generalisations of the Vassiliev invariants to objects other than knotted circles in \(\mathbb{R}^{3}\) take the name \textbf{finite type invariants}.
